--- a/index.html
+++ b/index.html
@@ -629,10 +629,10 @@
         </p>
     </footer>
 
-    <script src="./js/console.js"></script>
-    <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
-    <script src="./js/active-item-menu.js"></script>
+    <script src="./js/console.js" type="module"></script>
+    <script src="./js/modal.js" type="module"></script>
+    <script src="./js/mobile-menu.js" type="module"></script>
+    <script src="./js/active-item-menu.js" type="module"></script>
 </body>
 
 </html>
